# rules_mypy

./: MODULE.bazel
rules/proto/: proto.bzl
